[package]
name = "asninfo"
version = "0.3.4"
edition = "2021"
authors = ["Mingwei Zhang <mingwei@bgpkit.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/bgpkit/asninfo"
documentation = "https://docs.rs/asninfo"
description = """
A utility tool to export ASN information to JSON files.
"""
keywords = ["bgp", "bgpkit"]

[dependencies]
bgpkit-commons = "0.9.4"
serde_json = "1"
oneio = { version = "0.19.0", default-features = false, features = ["https", "s3"] }
tracing-subscriber = "0.3"
tracing = "0.1"
clap = { version = "4.5", features = ["derive"] }
axum = { version = "0.8"}
 tokio = { version = "1.39", features = ["macros", "rt-multi-thread", "time", "net"] }
 chrono = { version = "0.4", default-features = false, features = ["clock", "serde", "std"] }
 
 dotenvy = "0.15.7"
 serde = { version = "1.0.210", features = ["derive"] }